# sideboarder

./: README.md  pyproject.toml
src/sideboarder/: __init__.py  __main__.py  app.py  carddb.py  clipboard.py  config.py  decklist.py  models.py  report.py  storage.py
src/sideboarder/screens/: dialogs.py  file_dialog.py  import_screen.py  main_screen.py  report_screen.py  settings_screen.py
src/sideboarder/widgets/: deck_pane.py  plan_editor.py
tests/: conftest.py  test_app_smoke.py  test_carddb.py  test_decklist.py  test_models.py  test_report.py  test_storage.py
